@@ -6,7 +6,7 @@ Source: gnome-shell
 Section: gnome
 Priority: optional
 Maintainer: Debian GNOME Maintainers <pkg-gnome-maintainers@lists.alioth.debian.org>
-Uploaders: Andreas Henriksson <andreas@fatal.se>, Jordi Mallach <jordi@debian.org>, Josselin Mouette <joss@debian.org>, Laurent Bigonville <bigon@debian.org>
+Uploaders: Andreas Henriksson <andreas@fatal.se>, Emilio Pozuelo Monfort <pochu@debian.org>, Jordi Mallach <jordi@debian.org>, Josselin Mouette <joss@debian.org>, Laurent Bigonville <bigon@debian.org>
 Build-Depends: autotools-dev,
                cdbs,
                debhelper (>= 8.1.3~),
@@ -14,18 +14,17 @@ Build-Depends: autotools-dev,
                gnome-control-center-dev (>= 3.4),
                gnome-pkg-tools (>= 0.11),
                gobject-introspection (>= 1.41.3),
-               gsettings-desktop-schemas-dev (>= 3.11),
+               gsettings-desktop-schemas-dev (>= 3.14),
                gtk-doc-tools,
                intltool (>= 0.26),
                libatk-bridge2.0-dev,
                libcanberra-dev,
                libcanberra-gtk3-dev,
-               libcaribou-dev (>= 0.4.8),
-               libclutter-1.0-dev (>= 1.15.90),
+               libclutter-1.0-dev (>= 1.22),
                libcroco3-dev (>= 0.6.8),
                libdbus-glib-1-dev,
                libecal1.2-dev (>= 3.7.90),
-               libedataserver1.2-dev (>= 3.7.90),
+               libedataserver1.2-dev (>= 3.14),
                libgcr-3-dev (>= 3.7.5),
                libgirepository1.0-dev (>= 1.29.15),
                libgjs-dev (>= 1.39.0),
@@ -34,9 +33,9 @@ Build-Depends: autotools-dev,
                libgnome-desktop-3-dev (>= 3.7.90),
                libgnome-menu-3-dev,
                libgstreamer1.0-dev (>= 0.11.92),
-               libgtk-3-dev (>= 3.13.2),
+               libgtk-3-dev (>= 3.16),
                libibus-1.0-dev,
-               libmutter-dev (>= 3.14.4),
+               libmutter-dev (>= 3.16.1),
                libnm-glib-dev (>= 0.9.8) [linux-any],
                libnm-glib-vpn-dev (>= 0.9.8) [linux-any],
                libnm-gtk-dev (>= 0.9.8) [linux-any],
@@ -52,7 +51,7 @@ Build-Depends: autotools-dev,
                libx11-dev,
                libxfixes-dev,
                libxml2-dev,
-               python (>= 2.6)
+               python3,
 Standards-Version: 3.9.6
 Homepage: http://live.gnome.org/GnomeShell
 Vcs-Svn: svn://anonscm.debian.org/pkg-gnome/desktop/unstable/gnome-shell
@@ -69,7 +68,7 @@ Depends: ${gir:Depends},
          gir1.2-accountsservice-1.0,
          gir1.2-atspi-2.0 (>= 2.9.91),
          gir1.2-caribou-1.0 (>= 0.4.8),
-         gir1.2-clutter-1.0 (>= 1.17),
+         gir1.2-clutter-1.0 (>= 1.22),
          gir1.2-freedesktop,
          gir1.2-gdesktopenums-3.0 (>= 3.12),
          gir1.2-gcr-3 (>= 3.7.5),
@@ -77,9 +76,9 @@ Depends: ${gir:Depends},
          gir1.2-glib-2.0 (>= 1.39.90-4~),
          gir1.2-gnomebluetooth-1.0 (>= 3.12.0) [linux-any],
          gir1.2-gnomedesktop-3.0 (>= 3.12.0),
-         gir1.2-gtk-3.0 (>= 3.8),
+         gir1.2-gtk-3.0 (>= 3.16),
          gir1.2-ibus-1.0 (>= 1.5.2),
-         gir1.2-mutter-3.0 (>= 3.14.4),
+         gir1.2-mutter-3.0 (>= 3.16.1),
          gir1.2-networkmanager-1.0 [linux-any],
          gir1.2-nmgtk-1.0 (>= 0.9.8) [linux-any],
          gir1.2-pango-1.0,
@@ -94,9 +93,9 @@ Depends: ${gir:Depends},
          gnome-shell-common (= ${source:Version}),
          gnome-themes-standard,
          gnome-backgrounds (>= 3.13.90),
-         gsettings-desktop-schemas (>= 3.11),
-         mutter (>= 3.14.4),
-         python (>= 2.6),
+         gsettings-desktop-schemas (>= 3.14),
+         mutter (>= 3.16.1),
+         python3,
          telepathy-mission-control-5,
 Recommends: gkbd-capplet,
             gnome-contacts,
